# pages

./: .gitignore  CLAUDE.md  app.js  graph.js  index.html  main.py  page-fold.js  post.js  projects.json  pyproject.toml  sidebar.js  style.css
.github/workflows/: deploy.yml
about/: index.html
assets/: manifest.json
blog/: graph.json  index.html  posts.json  tags.json
docs/: backlog-next-sessions.md  supernode-activation.md
github/: index.html
pipeline/: __init__.py  config.py  embedder.py  graph_builder.py  io.py  models.py  orchestrator.py  scanner.py  state.py  supernode_builder.py  tag_vocabulary.json  tagger.py
posts/Deeplearning_basic/: content.md
posts/_template/: index.html
posts/docker-container/: content.md
posts/hello-world/: content.md  index.html
posts/matplotlib1/: content.ipynb
posts/nn1/: content.md  ref.txt
posts/nn2/: content.md
scripts/: auto_tag.py  build_graph.py  build_site.py  post_update.py  pyproject.toml  test_auto_tag.py  test_build_graph.py  test_twinkle_update.py  twinkle_update.py
src/: github.js  graph.js  home-graph.js  home-stats.js  page-fold.js  post.js  posts.js  projects.js  sidebar.js  twinkle-feed.js  utils.js
templates/: base.html  nav.json
tests/: conftest.py  test_graph_builder.py  test_io.py  test_scanner.py  test_supernode_builder.py  test_tagger.py  test_twinkle_update.py  test_ui_static.py
twinkle/: 2026-04-20-sample-c.md  2026-04-24-sample-b.md  2026-04-25-sample-a.md  2026-04-28-leader.md  2026-04-28-responsibility.md  2026-4-25-memorycraft.md  index.html  twinkles.json
(+34 files in other folders)
